fix history tab and made log titles word wrap

--- a/stripeapiinterface.css
+++ b/stripeapiinterface.css
@@ -521,6 +521,7 @@ button#calculateButton:active {
     /* text-align: left; */
     margin-bottom: 0;
     margin-top: 0;
+    word-wrap: break-word;
   
   
 }
